# mrmat-python-api-fastapi

./: Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: build.yml
src/mrmat_python_api_fastapi/: __init__.py  app.py  config.py  db.py
src/mrmat_python_api_fastapi/apis/greeting/: __init__.py
src/mrmat_python_api_fastapi/apis/greeting/v2/: api.py
src/mrmat_python_api_fastapi/apis/greeting/v3/: api.py
src/mrmat_python_api_fastapi/apis/healthz/: api.py
src/mrmat_python_api_fastapi/apis/platform/: __init__.py
src/mrmat_python_api_fastapi/apis/platform/v1/: __init__.py  api.py  db.py  schema.py
src/mrmat_python_api_fastapi/apis/resource/: __init__.py
src/mrmat_python_api_fastapi/apis/resource/v1/: api.py  db.py  schema.py
tests/: conftest.py  test_greeting.py  test_healthz.py  test_platform.py
var/: client-k8s.http  client-localhost.http
var/container/: Dockerfile
var/helm/: Chart.yaml  values.yaml
var/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  edge-gateway-api.yaml  edge-ingress.yaml  edge-istio-gateway-api.yaml  edge-istio.yaml  httproute.yaml  ingress.yaml  route.yaml  secret.yaml  service.yaml  serviceaccount.yaml
