[build-system]
requires = [
    'setuptools==75.6.0',
    'wheel==0.45.1'
]
build-backend = 'setuptools.build_meta'

[project]
name = "mrmat-python-api-fastapi"
description = "A Python API using FastAPI"
urls = { "Sources" = "https://github.com/MrMatAP/mrmat-python-api-fastapi.git" }
keywords = ["api", "python", "fastapi"]
readme = "README.md"
license = { text = "MIT" }
authors = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
maintainers = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.12"
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
version = { attr = "ci.version"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = { dev = {file = ["requirements.dev.txt"] } }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mrmat_python_api_fastapi*"]
namespaces = true

[tool.setuptools.package-data]
"*" = [".mo", "*.yml", "*.yaml", "*.md", "inventory", "*.j2", "*.html", "*.ico", "*.css", "*.js", "*.svg", "*.woff", "*.eot", "*.ttf"]

[project.scripts]
mrmat_python_api_fastapi = "mrmat_python_api_fastapi.cli:run"

[tool.mypy]
plugins = [ 'pydantic.mypy' ]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[pytest]
testpaths = 'tests'
addopts = '--cov=mrmat_python_api_fastapi --cov-report=term --cov-report=xml:build/coverage.xml --junit-xml=build/junit.xml'
junit_family = 'xunit2'
log_cli = 1
log_cli_level = 'INFO'
log_cli_format = '%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)'
log_cli_date_format = '%Y-%m-%d %H:%M:%S'
